Fixed spacing and added fishing

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -25,7 +25,7 @@
 
 .flex-ach {
     display: flex;
-    width: 500px;
+    width: 550px;
     justify-content: space-between;
     margin-top: 10px;
 }
